# rayt

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: args.rs  camera.rs  color.rs  consts.rs  error.rs  finite_non_zero_float.rs  gamma.rs  hit_record.rs  image.rs  intersect_record.rs  lib.rs  main.rs  material.rs  pixel.rs  point3.rs  ppm.rs  primitives.rs  scene.rs  scenes.rs  traits.rs  vec3.rs  world.rs
src/adapters/encoders/: image.rs  pixel.rs
src/adapters/encoders/image/: ppm.rs
src/adapters/encoders/pixel/: u8.rs
src/consts/msg/: en_us.rs
src/error/: io.rs
src/finite_non_zero_float/: finite_non_zero_f32.rs  finite_non_zero_f64.rs
src/image/: unit_tests.rs
src/image/unit_tests/: as_mut.rs  as_ref.rs  i_image.rs  new.rs
src/material/: lambertian.rs
src/pixel/unit_tests/: i_pixel_ext.rs  into_iter.rs
src/primitives/: dir3.rs  direction3.rs  pixel.rs  point3.rs  ray.rs  sphere.rs  vec3.rs
src/primitives/pixel/: unit_tests.rs
src/primitives/pixel/unit_tests/: from.rs  (+4 more)
src/primitives/ray/: reflected.rs
src/primitives/vec3/: unit_tests.rs
src/scenes/: basic_red_sphere.rs  empty_scene.rs  rainbow.rs  sphere_and_ground.rs
src/traits/: i_encoder.rs  i_image.rs  i_intersect.rs  i_material.rs  i_pixel.rs  i_random_constructors.rs  i_render.rs  i_rgb_pixel.rs  i_triplet.rs
src/vec3/: unit_tests.rs
src/vec3/unit_tests/: accessors.rs  add.rs  add_assign.rs  cross.rs  default.rs  div.rs  div_assign.rs  dot.rs  index.rs  into_iter.rs  length.rs  mul.rs  mul_assign.rs  neg.rs  sub.rs  sub_assign.rs  unit_vector.rs
src/world/: iter.rs
(+15 files in other folders)
